Added image, basic stying and text along with placeholder navbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.navbar {
+
+  background-color: #333;
+ overflow: hidden;
+}
+
 body {
-    background: rgb(73, 141, 219);
+    color:rgb(0, 0, 0);
+    background: rgb(175, 175, 175);
   }
